--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conner Tate</title>
+    <title>Photo Bomb</title>
     <style>
         body {
             margin: 0;
@@ -15,15 +15,31 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             background-color: #ffffff;
         }
-        h1 {
-            font-size: 3rem;
-            font-weight: 300;
-            color: #333;
+        .title-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        .bomb-image {
+            width: 100px;
+            height: auto;
+            margin-bottom: -8px;
+        }
+        .title-text {
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #000;
             margin: 0;
+            line-height: 0.9;
         }
     </style>
 </head>
 <body>
-    <h1>Conner Tate</h1>
+    <div class="title-container">
+        <img src="bomb.png" alt="Bomb" class="bomb-image">
+        <div class="title-text">PHOTO</div>
+        <div class="title-text">BOMB</div>
+    </div>
 </body>
 </html>
